--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-	<div class="nav">
+	<div class="header">
 		<h1>Shaw's News</h1>
 	</div>
 		</header>
